--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "npm": "1.3"
   },
   "dependencies": {
-    "docpad": "~6.56.0",
+    "docpad": "6.63",
     "docpad-plugin-cleanurls": "~2.5.2",
     "docpad-plugin-eco": "~2.0.2",
     "docpad-plugin-ghpages": "~2.4.0",
