--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "npm": "1.3"
   },
   "dependencies": {
-    "docpad": "6.63",
-    "docpad-plugin-cleanurls": "~2.5.2",
-    "docpad-plugin-eco": "~2.0.2",
-    "docpad-plugin-ghpages": "~2.4.0",
-    "docpad-plugin-marked": "~2.1.2",
-    "docpad-plugin-moment": "~2.0.2"
+    "docpad": "^6.69.2",
+    "docpad-plugin-cleanurls": "^2.7.0",
+    "docpad-plugin-eco": "^2.1.0",
+    "docpad-plugin-ghpages": "^2.4.0",
+    "docpad-plugin-marked": "^2.2.1",
+    "docpad-plugin-moment": "^2.0.2"
   },
   "repository": {
     "type": "git",
